# logicsim

./: CMakeLists.txt
src/: AppState.cppm  Main.cpp
src/rendering/: ColorUtils.cppm  WindowType.cppm
src/rendering/shapes/: Superellipse.cppm
src/rendering/ui/: Button.cppm
src/screens/: MainMenuScreen.cppm  Screen.cppm
